# dataup-sdk

./: .gitignore  README.md  pyproject.toml
src/dataup/: __init__.py  _base.py  _pagination.py  async_client.py  client.py  exceptions.py
src/dataup/cli/: __init__.py  config.py  evaluation.py  main.py  utils.py
src/dataup/cvat/: __init__.py  _base.py  async_client.py  client.py  exceptions.py  utils.py
src/dataup/cvat/models/: __init__.py  annotations.py  common.py  enums.py  frames.py  jobs.py  tasks.py
src/dataup/evaluation/: __init__.py  runner.py
src/dataup/evaluation/providers/: __init__.py  base.py  roboflow.py  ultralytics.py
src/dataup/models/: __init__.py  agents.py  common.py  enums.py  evaluations.py  inference.py
